temp/objects/Monthly_Revenue_Rollups__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actual_Revenue__c</fullName>
        <label>Monthly Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Forecasted_Revenue_Weighted__c</fullName>
        <label>Monthly Forecasted Revenue(Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Forecasted_Revenue__c</fullName>
        <label>Monthly Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Date__c</fullName>
        <description>Hold the monthly revenue date of the Opportunity level</description>
        <label>Monthly Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Monthly Revenue Rollups</relationshipLabel>
        <relationshipName>Monthly_Revenue_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Revenue_Rollup__c</fullName>
        <label>Yearly Revenue Rollup</label>
        <referenceTo>Yearly_Revenue_Rollups__c</referenceTo>
        <relationshipLabel>Monthly Revenue Rollups</relationshipLabel>
        <relationshipName>Monthly_Revenue_Rollups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Monthly Revenue Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Monthly_Revenue_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Yearly_Revenue_Rollup__c</columns>
        <columns>Monthly_Actual_Revenue__c</columns>
        <columns>Monthly_Forecasted_Revenue__c</columns>
        <columns>Monthly_Forecasted_Revenue_Weighted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Monthly Revenue Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Revenue Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>